# unreceiptify

./: .dockerignore  .env.example  .gitignore  .infisical.json  .pre-commit-config.yaml  README.md  Taskfile.yml  docker-compose.yml  fly.toml  mise.toml  prod.Dockerfile  requirements.txt  unreceiptify.code-workspace  vercel.json
.gitea/workflows/: build-and-push.yaml
.github/workflows/: build-and-push.yaml  deploy.yaml
api/: .env.example  Dockerfile  pyproject.toml  scratch.ipynb
api/api/: app.py  dependencies.py  settings.py
api/api/handlers/: upload.py
api/api/internal/: receipt.py
api/api/schemas/: __init__.py  base.py  receipt.py
infra/helm/unreceiptify/: values.yaml
infra/helm/unreceiptify/templates/: secrets.yaml
infra/terraform/: .terraform.lock.hcl  azurerm.tfbackend.example  backend.tf  main.tf  outputs.tf
ui/: .prettierrc  bun.lockb  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: api.ts  constants.ts  mock.ts  types.ts  utils.ts
ui/src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte
ui/src/routes/: +layout.svelte  +page.svelte
