[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "Kenneth V. Domingo", email = "hello@kvd.studio" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.5,<0.116",
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.6.1,<3",
    "pillow>=11.0.0,<12",
    "pillow-heif>=0.20.0,<0.21",
    "azure-ai-documentintelligence>=1.0.0b4,<2",
    "python-magic>=0.4.27,<0.5",
    "python-multipart>=0.0.17,<0.0.18",
    "loguru>=0.7.2,<0.8",
    "uvicorn>=0.32.1,<0.33",
    "aiohttp>=3.11.8,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3,<0.8",
    "ipython>=8.29.0,<9",
    "jupyter>=1.1.1,<2",
    "notebook>=7.2.2,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.field_validator", "pydantic.model_validator"]
