[project]
name = "unreceiptify"
version = "0.1.0"
description = ""
authors = [{ name = "Kenneth V. Domingo", email = "hello@kvd.studio" }]
requires-python = "~=3.13.0"
dependencies = [
    "fastapi[standard]~=0.115.0",
    "pydantic~=2.9",
    "pydantic-settings~=2.6.0",
    "pillow~=11.0.0",
    "pillow-heif~=0.20.0",
    "azure-ai-documentintelligence~=1.0.2",
    "python-magic~=0.4.27",
    "python-multipart~=0.0.17",
    "loguru~=0.7.2",
    "uvicorn~=0.34.2",
    "aiohttp~=3.11.8",
]

[dependency-groups]
dev = [
    "ruff~=0.7.3",
    "ipython~=8.29.0",
    "jupyter~=1.1.1",
    "notebook~=7.2.2",
    "ty~=0.0.24",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.field_validator", "pydantic.model_validator"]
